2025-04-27T12:46:10Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/14692205209 # 942
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-04-27
* notice: last 14d: unq all: 16 61
* notice: prev accum: outdated-unq outdated-all / unq all: 1048 5367 / 1064 5426
* notice: next accum: outdated-unq outdated-all / unq all: 1048 5367 / 1065 5428
* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2025-04-27]

2025-04-26T12:45:47Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/14681364509 # 940
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-04-26
* notice: last 14d: unq all: 15 59
* notice: prev accum: outdated-unq outdated-all / unq all: 1048 5367 / 1063 5425
* notice: next accum: outdated-unq outdated-all / unq all: 1048 5367 / 1064 5426
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-04-26]

2025-04-25T12:51:22Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/14665028847 # 938
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-04-25
* notice: last 14d: unq all: 14 58
* notice: prev accum: outdated-unq outdated-all / unq all: 1048 5367 / 1060 5404
* notice: next accum: outdated-unq outdated-all / unq all: 1048 5367 / 1063 5425
* notice: prev exec diff / last date diff / accum: unq all: +3 +21 -0 -0 / +3 +21 -0 -0 / 3 21
* notice: removed / changed dates: [] / [2025-04-25]

2025-04-25T02:01:27Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/14655358683 # 937