@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-04-27T12:46:10Z",
-  "count_outdated" : 5367,
-  "uniques_outdated" : 1048,
+  "timestamp" : "2025-04-28T02:04:36Z",
+  "count_outdated" : 5368,
+  "uniques_outdated" : 1049,
   "count" : 5428,
   "uniques" : 1065,
   "views" : [
-    {
-      "timestamp": "2025-04-13T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-04-15T00:00:00Z",
       "count": 2,
