@@ -1,12 +1,7 @@
 {
-  "count": 61,
-  "uniques": 16,
+  "count": 60,
+  "uniques": 15,
   "views": [
-    {
-      "timestamp": "2025-04-13T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2025-04-15T00:00:00Z",
       "count": 2,
